--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
 
     <section class="hero">
-      <img src="http://lorempixel.com/1000/600/abstract">
+      <img src="abstract.jpg">
     </section>
 
     <section class="details">
